Bug 192886 - Sporadic scaling problems with Places panel
Summary: Sporadic scaling problems with Places panel
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Applications
Component: kfileplacesview (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 194786 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-16 15:28 UTC by Michal Ziabkowski
Modified: 2009-06-01 00:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Oversized icons (12.85 KB, image/png)
2009-05-16 15:28 UTC, Michal Ziabkowski
Details
Normal icons (6.18 KB, image/png)
2009-05-16 15:29 UTC, Michal Ziabkowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Ziabkowski 2009-05-16 15:28:00 UTC
Version:           1.2.80 (using 4.2.85 (KDE 4.2.85 (KDE 4.3 Beta1)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.29-gentoo-r3

The items in the Places panel are displayed with oversized icons at times (see dolphin-places-scaling-bad.png), but not always. On most occasions they are displayed like they used to be before KDE 4.3 beta1 (see dolphin-places-scaling-good.png). This behaviour seems random. To reproduce it just keep opening and closing Dolphin until you get the oversized set of icons. The bug doesn't seem to happen if there is at least one instance of Dolphin already in the background.

Qt: 4.5.1
KDE: 4.2.85 (KDE 4.2.85 (KDE 4.3 Beta1))
Comment 1 Michal Ziabkowski 2009-05-16 15:28:47 UTC
Created attachment 33720 [details]
Oversized icons
Comment 2 Michal Ziabkowski 2009-05-16 15:29:12 UTC
Created attachment 33721 [details]
Normal icons
Comment 3 Christoph Feck 2009-05-19 01:36:18 UTC
Confirmed. This bug has probably been introduced with http://websvn.kde.org/?view=rev&revision=967642

As far as I understand that patch, it delays translation of the strings, so the initial layout is computed from empty texts. It should somehow force a relayout once the translated names are available.
Comment 4 Peter Penz 2009-05-19 08:29:27 UTC
SVN commit 969862 by ppenz:

Fixed regression that KFilePlacesView calculated a wrong text width when
opening it the first time. Inside KFilePlacesItem the bookmark must be
set with setBookmark() to update the cache for the translated text.

BUG: 192886


 M  +1 -1      kfileplacesitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969862
Comment 5 Michal Ziabkowski 2009-05-19 13:40:03 UTC
This also seems to fix bug 192884 (missing labels). Thanks.
Comment 6 Christoph Feck 2009-06-01 00:56:19 UTC
*** Bug 194786 has been marked as a duplicate of this bug. ***