Fixed regression that KFilePlacesView calculated a wrong text width when opening it the first time. Inside KFilePlacesItem the bookmark must be set with setBookmark() to update the cache for the translated text.

BUG: 192886

svn path=/trunk/KDE/kdelibs/; revision=969862